
  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add myself to Uploaders.
  * New upstream release.
    - Switch to the Qt5 version in order to drop Qt4's webkit (Closes: #784476)
      and KDE4 support. We can add KF5 support as soon as it happen upstream.
  * Override dh_auto_configure in order to use Qt5's qmake. We can drop this
    if CMakeLists.txt starts detecting Qt5.

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Mon, 21 Sep 2015 19:47:54 -0300

kchmviewer (6.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Update patches:
    - 01_disable_kio-msits_build.diff: drop, obsolete
    - disable_check_new_version.patch: update
  * Bump debhelper compatibility to 9:
    - bump compat to 9
    - bump debhelper build dependency to >= 9
    - fix placement of $@ as dh argument
  * Stop recommending okular-extra-backends, as kchmviewer does not use
    kio-msits anymore.
  * Remove debian/not-installed, outdated and unused.
  * Simplify watch file.
  * Update copyright.
  * Bump Standards-Version to 3.9.5, no changes required.
  * Add Vcs-* headers.
  * Move kchmviewer.1 from the debian/additions/ directory to just debian/.
  * Add libqtwebkit-dev build dependency.
  * Link in as-needed mode.

 -- Pino Toscano <pino@debian.org>  Sun, 09 Feb 2014 15:09:28 +0100

kchmviewer (5.3-1) unstable; urgency=low

  * New upstream release.
  * Remove patches:
    - 00_ftbfs_svn_r363.diff - merged upstream
    - 02_grammatical_error.diff - merger upstream
  * Add disable_check_new_version.patch to disable new version checking.
    (Closes: #602535)

 -- Fathi Boudra <fabo@debian.org>  Sun, 30 Jan 2011 19:08:06 +0200

kchmviewer (5.2-1) unstable; urgency=low

  * New upstream release.
  * Add patch to fix ftbfs caused by missing files.
  * Add Recommends okular-extra-backends. (Closes: #597719)

 -- Fathi Boudra <fabo@debian.org>  Wed, 06 Oct 2010 16:47:08 +0300

kchmviewer (5.1-1) unstable; urgency=low

  * New upstream release.
